--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -1,14 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- index CSS -->
     <link rel="stylesheet" href="./styles/index.css" />
 </head>
+
 <body>
-    <!-- UPDATE CONTENT HERE -->
-    <h1>Body</h1>
+    <!-------------------
+     Header 
+    --------------------->
+    <header>
+        <div class="container">
+            <div class="header__content ">
+                <a href="#" class="logo">
+                    <span>Yoora</span>
+                </a>
+                <nav>
+                    <div class="nav__menu">
+                        <ul>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a>d</li>
+                        </ul>
+                    </div>
+                    <div class="nav__button btn">d</div>
+                </nav>
+            </div>
+            <div class="header__carousel"></div>
+            <div class="header__tab">
+                <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+
+        </div>
+    </header>
+    <!-------------------
+     Header end 
+    --------------------->
+
+
+
+
+
+    <!-------------------
+     Serviec section 
+    --------------------->
+    <section class="service">
+        <div class="container">
+            <div class="service__left"></div>
+            <div class="service__right"></div>
+        </div>
+    </section>
+
+    <!-------------------
+     Serviec end
+    --------------------->
+
+
+
+
+
+    <!-------------------
+     Product section 
+    --------------------->
+    <section class="product">
+        <div class="container">
+            <div class="product__item"></div>
+            <div class="product__item"></div>
+            <div class="product__item"></div>
+            <div class="product__item"></div>
+            <div class="product__item"></div>
+            <div class="product__item"></div>
+        </div>
+    </section>
+    <!-------------------
+     Product end
+    --------------------->
+
+
+
+
+    <!-------------------
+     Marketing section 
+    --------------------->
+    <section class="marketing">
+        <div class="container">
+            <div class="marketing__left"></div>
+            <div class="marketing__right">
+                <div class="marketing__item"></div>
+                <div class="marketing__item"></div>
+                <div class="marketing__item"></div>
+            </div>
+        </div>
+
+    </section>
+    <!-------------------
+     Marketing end
+    --------------------->
+
+
+
+
+    <!-------------------
+     BlogArticle section 
+    --------------------->
+    <section class="Blog_Article">
+        <div class="container">
+            <article class="article__new"></article>
+            <article class="article__new"></article>
+            <article class="article__new"></article>
+        </div>
+    </section>
+    <!-------------------
+     BlgoArticle end
+    --------------------->
+
+
+
+
+    <!-------------------
+    CTA section 
+    --------------------->
+    <section class="cta_blog">
+        <!--  Call to Action Blog -->
+
+    </section>
+    <!-------------------
+    CTA end
+    --------------------->
+
+
+
+
+    <!-------------------
+    footer 
+    --------------------->
+    <footer>
+        <div class="container">
+            <div class="footer__content">
+                <div class="content__left"></div>
+                <div class="content__right"></div>
+            </div>
+            <div class="footer__rules"></div>
+        </div>
+    </footer>
+
 </body>
+
 </html>
