--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -19,30 +19,37 @@
         <div class="container">
             <div class="header__content ">
                 <a href="#" class="logo">
-                    <span>Yoora</span>
+                    <img src="../practice-01/img/logo.png" alt="logo">
+                    
                 </a>
                 <nav>
-                    <div class="nav__menu">
+                    <div class="nav__menu ">
                         <ul>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a>d</li>
+                            <li><a href="#">Product</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Company</a></li>
+                            <li><a href="#">Recources</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="nav__button btn">d</div>
+                    <div class="nav__button ">
+                        <button class="btn button--font">Login</button>
+                        <button class="btn button--font">Try for Free</button>
+                       
+                    </div>
                 </nav>
             </div>
-            <div class="header__carousel"></div>
-            <div class="header__tab">
+            <div class="header__carousel font--x-larger">
+                <p>New and insights <br><span>form our experts</span></p> 
+            </div>
+            <div class="header__tab font--tab">
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="#">All Articles</a></li>
+                    <li><a href="#">Sales</a></li>
+                    <li><a href="#">Marketing</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">News</a></li>
                 </ul>
             </div>
 
