update BEM naming&font-css

--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -15,41 +15,43 @@
     <!-------------------
      Header 
     --------------------->
-    <header>
+    <header class="header--contnainer">
         <div class="container">
             <div class="header__content ">
                 <a href="#" class="logo">
                     <img src="../practice-01/img/logo.png" alt="logo">
-                    
+
                 </a>
-                <nav>
-                    <div class="nav__menu ">
-                        <ul>
-                            <li><a href="#">Product</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Recources</a></li>
-                            <li><a href="#">Contact</a></li>
+                <nav class="navbar--container">
+                    <div class="nav__menu font--nav ">
+                        <ul class="menu__list">
+                            <li class="menu--item"><a class="item--link" href="#">Product</a></li>
+                            <li class="menu--item"><a class="item--link" href="#">Company</a></li>
+                            <li class="menu--item"><a class="item--link" href="#">Pricing</a></li>
+                            <li class="menu--item"><a class="item--link" href="#">Recources</a></li>
+                            <li class="menu--item"><a class="item--link" href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="nav__button ">
-                        <button class="btn button--font">Login</button>
-                        <button class="btn button--font">Try for Free</button>
-                       
+                    <div class="nav__option ">
+                        <button class="nav__button btn font--button">Login</button>
+                        <button class="nav__button btn ">Try for Free</button>
+
                     </div>
                 </nav>
             </div>
             <div class="header__carousel font--x-larger">
-                <p>New and insights <br><span>form our experts</span></p> 
+                <p class="carousel__content--above">New and insights <br>
+                    <span class="carousel__content--below">form our experts</span>
+                </p>
             </div>
             <div class="header__tab font--tab">
-                <ul>
-                    <li><a href="#">All Articles</a></li>
-                    <li><a href="#">Sales</a></li>
-                    <li><a href="#">Marketing</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Product</a></li>
-                    <li><a href="#">News</a></li>
+                <ul class="tab__list">
+                    <li class="list--item"><a class="item--link" href="#">All Articles</a></li>
+                    <li class="list--item"><a class="item--link" href="#">Sales</a></li>
+                    <li class="list--item"><a class="item--link" href="#">Marketing</a></li>
+                    <li class="list--item"><a class="item--link" href="#">Service</a></li>
+                    <li class="list--item"><a class="item--link" href="#">Product</a></li>
+                    <li class="list--item"><a class="item--link" href="#">News</a></li>
                 </ul>
             </div>
 
