update header&nav name

--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -15,47 +15,47 @@
     <!-------------------
      Header 
     --------------------->
-    <header>
-        <div class="header--container">
-            <div class="container">
-                <div class="header__content ">
-                    <a href="#" class="logo">
-                        <img src="../practice-01/img/logo.png" alt="logo">
+    <header class="header">
 
-                    </a>
-                    <div class="navbar--container">
-                        <div class="nav__menu font--nav ">
-                            <ul class="menu__list">
-                                <li><a class="menu__item" href="#">Product</a></li>
-                                <li><a class="menu__item" href="#">Company</a></li>
-                                <li><a class="menu__item" href="#">Pricing</a></li>
-                                <li><a class="menu__item" href="#">Recources</a></li>
-                                <li><a class="menu__item" href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="nav__option ">
-                            <button class="button--login btn ">Login</button>
-                            <button class="button--tryfree btn ">Try for Free</button>
+        <div class="container">
+            <div class="header__content ">
+                <a href="#" class="logo">
+                    <img src="../practice-01/img/logo.png" alt="logo">
 
-                        </div>
+                </a>
+                <nav class="navbar">
+                    <div class="nav__menu font--nav ">
+                        <ul class="menu__list">
+                            <li><a class="menu__item" href="#">Product</a></li>
+                            <li><a class="menu__item" href="#">Company</a></li>
+                            <li><a class="menu__item" href="#">Pricing</a></li>
+                            <li><a class="menu__item" href="#">Recources</a></li>
+                            <li><a class="menu__item" href="#">Contact</a></li>
+                        </ul>
                     </div>
-                </div>
-                <div class="header__carousel font--x-larger">
-                    <p class="carousel__content--above">New and insights <br>
-                        <span class="carousel__content--below">form our experts</span>
-                    </p>
-                </div>
-                <div class="header__tab font--tab">
-                    <ul class="tab__list">
-                        <li class="list--mark"><a class="list__item" href="#">All Articles</a></li>
-                        <li><a class="list__item" href="#">Marketing</a></li>
-                        <li><a class="list__item" href="#">Service</a></li>
-                        <li><a class="list__item" href="#">Product</a></li>
-                        <li><a class="list__item" href="#">News</a></li>
-                        <li><a class="list__item" href="#">Sales</a></li>
+                    <div class="nav__option ">
+                        <button class="button--login btn ">Login</button>
+                        <button class="button--tryfree btn ">Try for Free</button>
+
+                    </div>
+                </nav>                
+            </div>
+            <div class="header__carousel font--x-larger">
+                <p class="carousel__content--above">New and insights <br>
+                    <span class="carousel__content--below">form our experts</span>
+                </p>
+            </div>
+            <div class="header__tab font--tab">
+                <ul class="tab__list">
+                    <li class="list--mark"><a class="list__item" href="#">All Articles</a></li>
+                    <li><a class="list__item" href="#">Marketing</a></li>
+                    <li><a class="list__item" href="#">Service</a></li>
+                    <li><a class="list__item" href="#">Product</a></li>
+                    <li><a class="list__item" href="#">News</a></li>
+                    <li><a class="list__item" href="#">Sales</a></li>
 
             </div>
-        </div>
+
 
     </header>
     <!-------------------
