--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -24,35 +24,35 @@
 
                 </a>
                 <nav class="navbar">
-                    <div class="nav__menu font--nav ">
+                    <div class="nav__menu ">
                         <ul class="menu__list">
-                            <li><a class="menu__item" href="#">Product</a></li>
-                            <li><a class="menu__item" href="#">Company</a></li>
-                            <li><a class="menu__item" href="#">Pricing</a></li>
-                            <li><a class="menu__item" href="#">Recources</a></li>
-                            <li><a class="menu__item" href="#">Contact</a></li>
+                            <li><a class="item small-text" href="#">Product</a></li>
+                            <li><a class="item small-text" href="#">Company</a></li>
+                            <li><a class="item small-text" href="#">Pricing</a></li>
+                            <li><a class="item small-text" href="#">Recources</a></li>
+                            <li><a class="item small-text" href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="nav__option ">
-                        <button class="button--login btn ">Login</button>
-                        <button class="button--tryfree btn ">Try for Free</button>
+                    <div class="nav__option">
+                        <button class="button btn ">Login</button>
+                        <button class="button btn ">Try for Free</button>
 
                     </div>
                 </nav>                
             </div>
-            <div class="header__carousel font--x-larger">
-                <p class="carousel__content--above">New and insights <br>
+            <div class="header__carousel">
+                <p class="carousel__content--above font-xxx-large ">New and insights <br>
                     <span class="carousel__content--below">form our experts</span>
                 </p>
             </div>
-            <div class="header__tab font--tab">
+            <div class="header__tab">
                 <ul class="tab__list">
-                    <li class="list--mark"><a class="list__item" href="#">All Articles</a></li>
-                    <li><a class="list__item" href="#">Marketing</a></li>
-                    <li><a class="list__item" href="#">Service</a></li>
-                    <li><a class="list__item" href="#">Product</a></li>
-                    <li><a class="list__item" href="#">News</a></li>
-                    <li><a class="list__item" href="#">Sales</a></li>
+                    <li class="list--mark"><a class="list__item medium-text" href="#">All Articles</a></li>
+                    <li><a class="list__item medium-text" href="#">Marketing</a></li>
+                    <li><a class="list__item medium-text" href="#">Service</a></li>
+                    <li><a class="list__item medium-text " href="#">Product</a></li>
+                    <li><a class="list__item medium-text" href="#">News</a></li>
+                    <li><a class="list__item medium-text" href="#">Sales</a></li>
 
             </div>
 
