fix/Header and Service

--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -26,23 +26,23 @@
                 <nav class="navbar">
                     <div class="nav__menu ">
                         <ul class="menu__list">
-                            <li><a class="item small-text" href="#">Product</a></li>
-                            <li><a class="item small-text" href="#">Company</a></li>
-                            <li><a class="item small-text" href="#">Pricing</a></li>
-                            <li><a class="item small-text" href="#">Recources</a></li>
-                            <li><a class="item small-text" href="#">Contact</a></li>
+                            <li><a class="item" href="#">Product</a></li>
+                            <li><a class="item" href="#">Company</a></li>
+                            <li><a class="item" href="#">Pricing</a></li>
+                            <li><a class="item" href="#">Recources</a></li>
+                            <li><a class="item" href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div class="nav__option">
-                        <button class="button btn ">Login</button>
-                        <button class="button btn ">Try for Free</button>
+                        <button class="btn ">Login</button>
+                        <button class="btn button--crab-nebula  ">Try for Free</button>
 
                     </div>
                 </nav>                
             </div>
             <div class="header__carousel">
-                <p class="carousel__content--above font-xxx-large ">New and insights <br>
-                    <span class="carousel__content--below">form our experts</span>
+                <p>New and insights <br>
+                    <span>form our experts</span>
                 </p>
             </div>
             <div class="header__tab">
@@ -71,9 +71,18 @@
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service__left"></div>
-            <div class="service__right"></div>
+            <div class="service__left heading">
+                <h5>SERVICE</h5>
+                <h1>CRM insights: Selecting <br>
+                    the Right One for Your <br>
+                    Organization</h1>
+                <h4>05 Sep 2022, <span>by Joshua Nash</span> </h4>
+            </div>
+            <div class="service__right">
+            </div>
         </div>
+            
+        
     </section>
 
     <!-------------------
