--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -116,16 +116,48 @@
     <!-------------------
      Marketing section 
     --------------------->
-    <section class="marketing">
+    <section class="product">
         <div class="container">
-            <div class="marketing__left"></div>
-            <div class="marketing__right">
-                <div class="marketing__item"></div>
-                <div class="marketing__item"></div>
-                <div class="marketing__item"></div>
-            </div>
-        </div>
+            <div class="product__content heading">
+                <div class="product__item ">
+                    <h5>News</h5>
+                    <div class="pic product--bg1"></div>
+                    <h3>How To Deliver a Successful Product Launch</h3>
+                    <h4>29 Jun 2022,<span>by joshua Nash</span> </h4>
+                </div>
+                <div class="product__item ">
+                    <h5>Sales</h5>
+                    <div class="pic product--bg2"></div>
+                    <h3>The best cities for sales careers in 2022</h3>
+                    <h4>20 Mar 2022, <span> Bill Holloway</span></h4>
+                </div>
+                <div class="product__item ">
+                    <h5>Sales</h5>
+                    <div class="pic product--bg3"></div>
+                    <h3>How to use 360 feedback to improve sales performance</h3>
+                    <h4>07 Jun 2022, <span>Stephen Henderson</span>  </h4>
+                </div>
+                <div class="product__item ">
+                    <h5>Sales</h5>
+                    <div class="pic product--bg4"></div>
+                    <h3>The Challenger Sale model: How to lead the conversation</h3>
+                    <h4>09 Jan 2022,<span>by joshua Nash</span> </h4>
+                </div>
+                <div class="product__item ">
+                    <h5>Product</h5>
+                    <div class="pic product--bg5"></div>
+                    <h3>3 ways To automate your lead generation process with Yoora</h3>
+                    <h4>08 Jul 2022, <span> Leroy Figueroa</span> </h4>
+                </div>
+                <div class="product__item ">
+                    <h5>Product</h5>
+                    <div class="pic product--bg6"></div>
+                    <h3> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                    <h4>05 Aug 2022,<span>by joshua Nash</span> </h4>
+                </div>
 
+
+            </div>
     </section>
     <!-------------------
      Marketing end
