--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -98,13 +98,46 @@
     --------------------->
     <section class="product">
         <div class="container">
-            <div class="product__item"></div>
-            <div class="product__item"></div>
-            <div class="product__item"></div>
-            <div class="product__item"></div>
-            <div class="product__item"></div>
-            <div class="product__item"></div>
-        </div>
+            <div class="product__content heading card ">
+                <div class="card-body ">
+                    <h5 class="card-title">News</h5>
+                    <div class="card-pic product--bg1"></div>
+                    <h3 class="card-text">How To Deliver a Successful Product Launch</h3>
+                    <h4>29 Jun 2022,<span>by joshua Nash</span> </h4>
+                </div>
+                <div class="card-body ">
+                    <h5 class="card-title">Sales</h5>
+                    <div class="card-pic product--bg2"></div>
+                    <h3 class="card-text">The best cities for sales careers in 2022</h3>
+                    <h4>20 Mar 2022, <span> Bill Holloway</span></h4>
+                </div>
+                <div class="card-body ">
+                    <h5 class="card-title">Sales</h5>
+                    <div class="card-pic product--bg3"></div>
+                    <h3 class="card-text">How to use 360 feedback to improve sales performance</h3>
+                    <h4>07 Jun 2022, <span>Stephen Henderson</span>  </h4>
+                </div>
+                <div class="card-body ">
+                    <h5 class="card-title">Sales</h5>
+                    <div class="card-pic product--bg4"></div>
+                    <h3 class="card-text">The Challenger Sale model: How to lead the conversation</h3>
+                    <h4>09 Jan 2022,<span>by joshua Nash</span> </h4>
+                </div>
+                <div class="card-body ">
+                    <h5 class="card-title">Product</h5>
+                    <div class="card-pic product--bg5"></div>
+                    <h3 class="card-text">3 ways To automate your lead generation process with Yoora</h3>
+                    <h4>08 Jul 2022, <span> Leroy Figueroa</span> </h4>
+                </div>
+                <div class="card-body ">
+                    <h5 class="card-title">Product</h5>
+                    <div class="card-pic product--bg6"></div>
+                    <h3 class="card-text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                    <h4>05 Aug 2022,<span>by joshua Nash</span> </h4>
+                </div>
+
+
+            </div>
     </section>
     <!-------------------
      Product end
@@ -116,48 +149,16 @@
     <!-------------------
      Marketing section 
     --------------------->
-    <section class="product">
+    <section class="marketing">
         <div class="container">
-            <div class="product__content heading">
-                <div class="product__item ">
-                    <h5>News</h5>
-                    <div class="pic product--bg1"></div>
-                    <h3>How To Deliver a Successful Product Launch</h3>
-                    <h4>29 Jun 2022,<span>by joshua Nash</span> </h4>
-                </div>
-                <div class="product__item ">
-                    <h5>Sales</h5>
-                    <div class="pic product--bg2"></div>
-                    <h3>The best cities for sales careers in 2022</h3>
-                    <h4>20 Mar 2022, <span> Bill Holloway</span></h4>
-                </div>
-                <div class="product__item ">
-                    <h5>Sales</h5>
-                    <div class="pic product--bg3"></div>
-                    <h3>How to use 360 feedback to improve sales performance</h3>
-                    <h4>07 Jun 2022, <span>Stephen Henderson</span>  </h4>
-                </div>
-                <div class="product__item ">
-                    <h5>Sales</h5>
-                    <div class="pic product--bg4"></div>
-                    <h3>The Challenger Sale model: How to lead the conversation</h3>
-                    <h4>09 Jan 2022,<span>by joshua Nash</span> </h4>
-                </div>
-                <div class="product__item ">
-                    <h5>Product</h5>
-                    <div class="pic product--bg5"></div>
-                    <h3>3 ways To automate your lead generation process with Yoora</h3>
-                    <h4>08 Jul 2022, <span> Leroy Figueroa</span> </h4>
-                </div>
-                <div class="product__item ">
-                    <h5>Product</h5>
-                    <div class="pic product--bg6"></div>
-                    <h3> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
-                    <h4>05 Aug 2022,<span>by joshua Nash</span> </h4>
-                </div>
-
-
+            <div class="marketing__left"></div>
+            <div class="marketing__right">
+                <div class="marketing__item"></div>
+                <div class="marketing__item"></div>
+                <div class="marketing__item"></div>
             </div>
+        </div>
+
     </section>
     <!-------------------
      Marketing end
