--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -38,7 +38,7 @@
                         <button class="btn button--crab-nebula  ">Try for Free</button>
 
                     </div>
-                </nav>                
+                </nav>
             </div>
             <div class="header__carousel">
                 <p>New and insights <br>
@@ -71,18 +71,18 @@
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service__left heading">
-                <h5>SERVICE</h5>
+            <div class="service__left heading card">
+                <h5 class="card-title">SERVICE</h5>
                 <h1>CRM insights: Selecting <br>
                     the Right One for Your <br>
                     Organization</h1>
-                <h4>05 Sep 2022, <span>by Joshua Nash</span> </h4>
+                <h4 class="card-footer">05 Sep 2022, <span>by Joshua Nash</span> </h4>
             </div>
             <div class="service__right">
             </div>
         </div>
-            
-        
+
+
     </section>
 
     <!-------------------
@@ -98,42 +98,42 @@
     --------------------->
     <section class="product">
         <div class="container">
-            <div class="product__content heading card ">
+            <div class="product__content  card ">
                 <div class="card-body ">
                     <h5 class="card-title">News</h5>
                     <div class="card-pic product--bg1"></div>
                     <h3 class="card-text">How To Deliver a Successful Product Launch</h3>
-                    <h4>29 Jun 2022,<span>by joshua Nash</span> </h4>
+                    <h4 class="card-footer">29 Jun 2022,<span>by joshua Nash</span> </h4>
                 </div>
                 <div class="card-body ">
                     <h5 class="card-title">Sales</h5>
                     <div class="card-pic product--bg2"></div>
                     <h3 class="card-text">The best cities for sales careers in 2022</h3>
-                    <h4>20 Mar 2022, <span> Bill Holloway</span></h4>
+                    <h4 class="card-footer">20 Mar 2022, <span> Bill Holloway</span></h4>
                 </div>
                 <div class="card-body ">
                     <h5 class="card-title">Sales</h5>
                     <div class="card-pic product--bg3"></div>
                     <h3 class="card-text">How to use 360 feedback to improve sales performance</h3>
-                    <h4>07 Jun 2022, <span>Stephen Henderson</span>  </h4>
+                    <h4 class="card-footer">07 Jun 2022, <span>Stephen Henderson</span> </h4>
                 </div>
                 <div class="card-body ">
                     <h5 class="card-title">Sales</h5>
                     <div class="card-pic product--bg4"></div>
                     <h3 class="card-text">The Challenger Sale model: How to lead the conversation</h3>
-                    <h4>09 Jan 2022,<span>by joshua Nash</span> </h4>
+                    <h4 class="card-footer">09 Jan 2022,<span>by joshua Nash</span> </h4>
                 </div>
                 <div class="card-body ">
                     <h5 class="card-title">Product</h5>
                     <div class="card-pic product--bg5"></div>
                     <h3 class="card-text">3 ways To automate your lead generation process with Yoora</h3>
-                    <h4>08 Jul 2022, <span> Leroy Figueroa</span> </h4>
+                    <h4 class="card-footer">08 Jul 2022, <span> Leroy Figueroa</span> </h4>
                 </div>
                 <div class="card-body ">
                     <h5 class="card-title">Product</h5>
                     <div class="card-pic product--bg6"></div>
                     <h3 class="card-text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
-                    <h4>05 Aug 2022,<span>by joshua Nash</span> </h4>
+                    <h4 class="card-footer">05 Aug 2022,<span>by joshua Nash</span> </h4>
                 </div>
 
 
@@ -151,12 +151,34 @@
     --------------------->
     <section class="marketing">
         <div class="container">
-            <div class="marketing__left"></div>
-            <div class="marketing__right">
-                <div class="marketing__item"></div>
-                <div class="marketing__item"></div>
-                <div class="marketing__item"></div>
+            <div class="marketing__content">
+                <div class="marketing__left heading card--medium">
+                    <div class="card-body ">
+                        <h5 class="card-title">Marketing</h5>
+                        <div class="card-pic"></div>
+                        <h3 class="card-text">Email marketing best practices: 10 experts share their email tips</h3>
+                        <h4 class="card-footer">23 Nov 2022,<span>by joshua Nash</span></h4>
+                    </div>
+                </div>
+                <div class="marketing__right">
+                    <div class="card-body ">
+                        <h3 class="card-text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+
+
+                        <h4 class="card-footer">05 Aug 2022,<span>by joshua Nash</span></h4>
+
+                    </div>
+                    <div class="card-body ">
+                        <h3 class="card-text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                        <h4 class="card-footer">05 Aug 2022,<span>by joshua Nash</span> </h4>
+                    </div>
+                    <div class="card-body ">
+                        <h3 class="card-text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                        <h4 class="card-footer">05 Aug 2022,<span>by joshua Nash</span> </h4>
+                    </div>
+                </div>
             </div>
+
         </div>
 
     </section>
@@ -172,9 +194,26 @@
     --------------------->
     <section class="Blog_Article">
         <div class="container">
-            <article class="article__new"></article>
-            <article class="article__new"></article>
-            <article class="article__new"></article>
+            <div class="article__container">
+                <div class="card-body ">
+                    <h5 class="card-title">News</h5>
+                    <div class="card-pic art--bg1"></div>
+                    <h3 class="card-text">How To Deliver a Successful Product Launch</h3>
+                    <h4 class="card-footer">29 Jun 2022,<span>by joshua Nash</span> </h4>
+                </div>
+                <div class="card-body ">
+                    <h5 class="card-title">Sales</h5>
+                    <div class="card-pic art--bg2"></div>
+                    <h3 class="card-text">The best cities for sales careers in 2022</h3>
+                    <h4 class="card-footer">20 Mar 2022, <span> Bill Holloway</span></h4>
+                </div>
+                <div class="card-body ">
+                    <h5 class="card-title">Sales</h5>
+                    <div class="card-pic art--bg3"></div>
+                    <h3 class="card-text">How to use 360 feedback to improve sales performance</h3>
+                    <h4 class="card-footer">07 Jun 2022, <span>Stephen Henderson</span> </h4>
+                </div>
+            </div>
         </div>
     </section>
     <!-------------------
