--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -40,7 +40,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="header__carousel">
+            <div class="header__carousel title">
                 <p>New and insights <br>
                     <span>form our experts</span>
                 </p>
@@ -226,7 +226,21 @@
     <!-------------------
     CTA section 
     --------------------->
-    <section class="cta_blog">
+    <section class="cta ">
+        <div class="container">
+            <div class="cta__blog">
+                <div class="cta__content ">
+                    <p class="title">Ready to supercharge your business?</p>
+                    <p class="text">Ask about Yoora products, pricing, implementation, or anything else. Our highly trained reps are
+                        standing by, ready to help.</p>
+                </div>
+                <div class="cta__button">
+                    <button class="button btn "> Try For Free</button>
+                </div>
+            </div>
+
+        </div>
+
         <!--  Call to Action Blog -->
 
     </section>
