create service layout

--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -38,7 +38,7 @@
                         <button class="button btn ">Try for Free</button>
 
                     </div>
-                </nav>                
+                </nav>
             </div>
             <div class="header__carousel">
                 <p class="carousel__content--above font-xxx-large ">New and insights <br>
@@ -71,9 +71,18 @@
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service__left"></div>
-            <div class="service__right"></div>
+            <div class="service__left card--none-pic">
+                <h5 class="card-title">SERVICE</h5>
+                <h1 class="card-text">CRM insights: Selecting <br>
+                    the Right One for Your <br>
+                    Organization</h1>
+                <h4 class="card-footer">05 Sep 2022, <span class="card-footer-gray">by Joshua Nash</span> </h4>
+            </div>
+            <div class="service__right">
+            </div>
         </div>
+
+
     </section>
 
     <!-------------------
