fix bem name class

--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -71,12 +71,12 @@
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service__left card--none-pic">
-                <h5 class="card-title">SERVICE</h5>
-                <h1 class="card-text">CRM insights: Selecting <br>
+            <div class="service__left card card--none-pic">
+                <h5 class="card__title">SERVICE</h5>
+                <h1 class="card__text">CRM insights: Selecting <br>
                     the Right One for Your <br>
                     Organization</h1>
-                <h4 class="card-footer">05 Sep 2022, <span class="card-footer-gray">by Joshua Nash</span> </h4>
+                <h4 class="card__footer">05 Sep 2022, <span class="card__footer--gray">by Joshua Nash</span> </h4>
             </div>
             <div class="service__right">
             </div>
