--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -94,17 +94,50 @@
 
 
     <!-------------------
-     Product section 
+     Product section   
     --------------------->
     <section class="product">
         <div class="container">
-            <div class="product__item"></div>
-            <div class="product__item"></div>
-            <div class="product__item"></div>
-            <div class="product__item"></div>
-            <div class="product__item"></div>
-            <div class="product__item"></div>
-        </div>
+            <div class="product__content  card card--img">
+                <div class="card__body ">
+                    <h5 class="card__title">News</h5>
+                    <div class="card__pic product--bg1"></div>
+                    <h3 class="card__text">How To Deliver a Successful Product Launch</h3>
+                    <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                </div>
+                <div class="card__body ">
+                    <h5 class="card__title">Sales</h5>
+                    <div class="card__pic product--bg2"></div>
+                    <h3 class="card__text">The best cities for sales careers in 2022</h3>
+                    <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray"> Bill Holloway</span></h4>
+                </div>
+                <div class="card__body ">
+                    <h5 class="card__title">Sales</h5>
+                    <div class="card__pic product--bg3"></div>
+                    <h3 class="card__text">How to use 360 feedback to improve sales performance</h3>
+                    <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">Stephen Henderson</span> </h4>
+                </div>
+                <div class="card__body ">
+                    <h5 class="card__title">Sales</h5>
+                    <div class="card__pic product--bg4"></div>
+                    <h3 class="card__text">The Challenger Sale model: How to lead the conversation</h3>
+                    <h4 class="card__footer">09 Jan 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                </div>
+                <div class="card__body ">
+                    <h5 class="card__title">Product</h5>
+                    <div class="card__pic product--bg5"></div>
+                    <h3 class="card__text">3 ways To automate your lead generation process with Yoora</h3>
+                    <h4 class="card__footer">08 Jul 2022, <span class="card__footer--gray"> Leroy Figueroa</span> </h4>
+                </div>
+                <div class="card__body ">
+                    <h5 class="card__title">Product</h5>
+                    <div class="card__pic product--bg6"></div>
+                    <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                    <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                </div>
+
+
+            </div>
     </section>
     <!-------------------
      Product end
