--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -99,39 +99,39 @@
     <section class="product">
         <div class="container">
             <div class="product__content  card card--img">
-                <div class="card__body ">
+                <div class="card--img__body ">
                     <h5 class="card__title">News</h5>
-                    <div class="card__pic product--bg1"></div>
+                    <div class="product__img1 card__pic"></div>
                     <h3 class="card__text">How To Deliver a Successful Product Launch</h3>
                     <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
-                <div class="card__body ">
+                <div class="card--img__body ">
                     <h5 class="card__title">Sales</h5>
-                    <div class="card__pic product--bg2"></div>
+                    <div class="product__img2 card__pic"></div>
                     <h3 class="card__text">The best cities for sales careers in 2022</h3>
                     <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray"> Bill Holloway</span></h4>
                 </div>
-                <div class="card__body ">
+                <div class="card--img__body ">
                     <h5 class="card__title">Sales</h5>
-                    <div class="card__pic product--bg3"></div>
+                    <div class="product__img3 card__pic"></div>
                     <h3 class="card__text">How to use 360 feedback to improve sales performance</h3>
                     <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">Stephen Henderson</span> </h4>
                 </div>
-                <div class="card__body ">
+                <div class="card--img__body ">
                     <h5 class="card__title">Sales</h5>
-                    <div class="card__pic product--bg4"></div>
+                    <div class="product__img4 card__pic"></div>
                     <h3 class="card__text">The Challenger Sale model: How to lead the conversation</h3>
                     <h4 class="card__footer">09 Jan 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
-                <div class="card__body ">
+                <div class="card--img__body ">
                     <h5 class="card__title">Product</h5>
-                    <div class="card__pic product--bg5"></div>
+                    <div class="product__img5 card__pic"></div>
                     <h3 class="card__text">3 ways To automate your lead generation process with Yoora</h3>
                     <h4 class="card__footer">08 Jul 2022, <span class="card__footer--gray"> Leroy Figueroa</span> </h4>
                 </div>
-                <div class="card__body ">
+                <div class="card--img__body ">
                     <h5 class="card__title">Product</h5>
-                    <div class="card__pic product--bg6"></div>
+                    <div class="product__img6 card__pic"></div>
                     <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
                     <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
