--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -151,12 +151,34 @@
     --------------------->
     <section class="marketing">
         <div class="container">
-            <div class="marketing__left"></div>
-            <div class="marketing__right">
-                <div class="marketing__item"></div>
-                <div class="marketing__item"></div>
-                <div class="marketing__item"></div>
+            <div class="marketing__content">
+                <div class="marketing__left card card--img">
+                    <div class="card--img__body ">
+                        <h5 class="card__title">Marketing</h5>
+                        <div class="marketing__img card__pic"></div>
+                        <h3 class="card__text">Email marketing best practices: 10 experts share their email tips</h3>
+                        <h4 class="card__footer">23 Nov 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
+                    </div>
+                </div>
+                <div class="marketing__right">
+                    <div class="card-body ">
+                        <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+
+
+                        <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
+
+                    </div>
+                    <div class="card-body ">
+                        <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                        <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                    </div>
+                    <div class="card-body ">
+                        <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                        <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                    </div>
+                </div>
             </div>
+
         </div>
 
     </section>
