--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -115,7 +115,8 @@
                     <h5 class="card__title">Sales</h5>
                     <div class="card__pic card__pic--product3"></div>
                     <h3 class="card__text">How to use 360 feedback to improve sales performance</h3>
-                    <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">Stephen Henderson</span> </h4>
+                    <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">Stephen Henderson</span>
+                    </h4>
                 </div>
                 <div class="card--img__body ">
                     <h5 class="card__title">Sales</h5>
@@ -155,26 +156,42 @@
                 <div class="marketing__left card card--img">
                     <div class="card--img__body ">
                         <h5 class="card__title">Marketing</h5>
-                        <div class="marketing__img card__pic"></div>
+                        <div class="card__pic card__pic--marketing"></div>
                         <h3 class="card__text">Email marketing best practices: 10 experts share their email tips</h3>
                         <h4 class="card__footer">23 Nov 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
                     </div>
                 </div>
-                <div class="marketing__right">
-                    <div class="card-body ">
-                        <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                <div class="marketing__right card card--none-pic">
 
-
-                        <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
-
+                    <div class="card--none-pic__body">
+                        <div class="card--none-pic__body--block1">
+                            <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                            <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
+                            </h4>
+                        </div>
+                        <div class="card--none-pic__body--block2">
+                            <h5 class="card__title">PRODUCT</h5>
+                        </div>
                     </div>
-                    <div class="card-body ">
-                        <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
-                        <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                    <div class="card--none-pic__body">
+                        <div class="card--none-pic__body--block1">
+                            <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                            <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
+                            </h4>
+                        </div>
+                        <div class="card--none-pic__body--block2">
+                            <h5 class="card__title">PRODUCT</h5>
+                        </div>
                     </div>
-                    <div class="card-body ">
-                        <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
-                        <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                    <div class="card--none-pic__body">
+                        <div class="card--none-pic__body--block1">
+                            <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                            <h4 class="card__footer">11 Oct 2022,<span class="card__footer--gray">by joshua Nash</span>
+                            </h4>
+                        </div>
+                        <div class="card--none-pic__body--block2">
+                            <h5 class="card__title">PRODUCT</h5>
+                        </div>
                     </div>
                 </div>
             </div>
