--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -98,38 +98,38 @@
     --------------------->
     <section class="product">
         <div class="container">
-            <div class="product__content  card card--img">
-                <div class="card--img__body ">
+            <div class="product__content  card card__img">
+                <div class="card__img__body ">
                     <h5 class="card__title">News</h5>
                     <div class="card__pic card__pic--product1"></div>
                     <h3 class="card__text">How To Deliver a Successful Product Launch</h3>
                     <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
-                <div class="card--img__body ">
+                <div class="card__img__body ">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__pic card__pic--product2"></div>
                     <h3 class="card__text">The best cities for sales careers in 2022</h3>
                     <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray"> Bill Holloway</span></h4>
                 </div>
-                <div class="card--img__body ">
+                <div class="card__img__body ">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__pic card__pic--product3"></div>
                     <h3 class="card__text">How to use 360 feedback to improve sales performance</h3>
                     <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">Stephen Henderson</span> </h4>
                 </div>
-                <div class="card--img__body ">
+                <div class="card__img__body ">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__pic card__pic--product4"></div>
                     <h3 class="card__text">The Challenger Sale model: How to lead the conversation</h3>
                     <h4 class="card__footer">09 Jan 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
-                <div class="card--img__body ">
+                <div class="card__img__body ">
                     <h5 class="card__title">Product</h5>
                     <div class="card__pic card__pic--product5"></div>
                     <h3 class="card__text">3 ways To automate your lead generation process with Yoora</h3>
                     <h4 class="card__footer">08 Jul 2022, <span class="card__footer--gray"> Leroy Figueroa</span> </h4>
                 </div>
-                <div class="card--img__body ">
+                <div class="card__img__body ">
                     <h5 class="card__title">Product</h5>
                     <div class="card__pic card__pic--product6"></div>
                     <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
