--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -160,30 +160,29 @@
                         <h4 class="card__footer">23 Nov 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
                     </div>
                 </div>
-                <div class="marketing__right card ">
-
-                    <div class="card-body">
-                        <div class="card-body__block">
+                <div class="marketing__right card card--horizontal">
+                    <div class="card__body">
+                        <div class="card--horizontal-block">
                             <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
                             <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
                             </h4>
                         </div>
-                        <div class="card-body__block">
+                        <div class="card--horizontal-block">
                             <h5 class="card__title">PRODUCT</h5>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <div class="card-body__block">
+                    <div class="card__body">
+                        <div class="card--horizontal-block">
                             <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
                             <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
                             </h4>
                         </div>
-                        <div class="card-body__block">
+                        <div class="card--horizontalp-block">
                             <h5 class="card__title">PRODUCT</h5>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <div class="card-body__block">
+                    <div class="card__body">
+                        <div class="card--horizontal-block">
                             <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
                             <h4 class="card__footer">11 Oct 2022,<span class="card__footer--gray">by joshua Nash</span>
                             </h4>
