--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -101,7 +101,7 @@
             <div class="product__content  card card__img">
                 <div class="card__img-body ">
                     <h5 class="card__title">News</h5>
-                    <div class="car__img--bg bg-product1"></div>
+                    <div class="card__img--bg bg-product1"></div>
                     <h3 class="card__text">How To Deliver a Successful Product Launch</h3>
                     <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="card__img-body ">
                     <h5 class="card__title">Product</h5>
-                    <div class="card__img--bg bg-products6"></div>
+                    <div class="card__img--bg bg-product6"></div>
                     <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
                     <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
