--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -177,7 +177,7 @@
                             <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
                             </h4>
                         </div>
-                        <div class="card--horizontalp-block">
+                        <div class="card--horizontal-block">
                             <h5 class="card__title">PRODUCT</h5>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                             <h4 class="card__footer">11 Oct 2022,<span class="card__footer--gray">by joshua Nash</span>
                             </h4>
                         </div>
-                        <div class="card-body__block">
+                        <div class="card--horizontal-block">
                             <h5 class="card__title">PRODUCT</h5>
                         </div>
                     </div>
