--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -169,7 +169,7 @@
                     <div class="card__img-body ">
                         <h5 class="card__title">Marketing</h5>
                         <div class="card__img-pic ">
-                            <img src="./img/marketing__img.png" alt="marketing-pic">
+                            <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above">
                         </div>
                         <h3 class="card__text">Email marketing best practices: 10 experts share their email tips</h3>
                         <h4 class="card__footer">23 Nov 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
