--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -177,33 +177,33 @@
                 </div>
                 <div class="marketing__right card card--horizontal">
                     <div class="card__body">
-                        <div class="card-block">
+                        <div class="card--horizontal-block">
                             <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
                             <h4 class="card__footer">11 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
                             </h4>
                         </div>
-                        <div class="card-block">
+                        <div class="card--horizontal-block">
                             <h5 class="card__title">PRODUCT</h5>
                         </div>
                     </div>
                     <div class="card__body">
-                        <div class="card-block">
+                        <div class="card--horizontal-block">
                             <h3 class="card__text"> Sales presentations: templates, examples and ideas on how to present like a pro</h3>
                             <h4 class="card__footer">11 Oct 2022,<span class="card__footer--gray"> by Laura Ryan</span>
                             </h4>
                         </div>
-                        <div class="card-block">
+                        <div class="card--horizontal-block">
                             <h5 class="card__title">SALES</h5>
                         </div>
                     </div>
                     <div class="card__body">
-                        <div class="card-block">
+                        <div class="card--horizontal-block">
                             <h3 class="card__text"> How To Deliver a Successful <br>
                                 Product Launch</h3>
                             <h4 class="card__footer">30 Jan 2022,<span class="card__footer--gray"> by Alice Washington</span>
                             </h4>
                         </div>
-                        <div class="card-block">
+                        <div class="card--horizontal-block">
                             <h5 class="card__title">NEWS</h5>
                         </div>
                     </div>
