--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -225,9 +225,32 @@
     --------------------->
     <section class="Blog_Article">
         <div class="container">
-            <article class="article__new"></article>
-            <article class="article__new"></article>
-            <article class="article__new"></article>
+            <div class="article__content card card__img">
+                <div class="card__img-body ">
+                    <h5 class="card__title">SERVICE</h5>
+                    <div class="card__img-pic">
+                        <img src="./img/article__img1.png" alt="Here is a photo of the article title above" class="article__pic">
+                    </div>
+                    <h3 class="card__text">Sales Funnels: Definition, Process, Stages and Examples</h3>
+                    <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                </div>
+                <div class="card__img-body ">
+                    <h5 class="card__title">SALES</h5>
+                    <div class="card__img-pic">
+                        <img src="./img/article__img2.png" alt="Here is a photo of the article title above" class="article__pic">
+                    </div>
+                    <h3 class="card__text">What is a sales Yoora and how do you build one?</h3>
+                    <h4 class="card__footer">29 Mar 2022,<span class="card__footer--gray"> by Amanda Brooks/span> </h4>
+                </div>
+                <div class="card__img-body ">
+                    <h5 class="card__title">SERVICE</h5>
+                    <div class="card__img-pic">
+                        <img src="./img/article__img3.png" alt="Here is a photo of the article title above" class="article__pic">
+                    </div>
+                    <h3 class="card__text">10 real estate cold calling scripts to increase lead generation</h3>
+                    <h4 class="card__footer">27 Dec 2022,<span class="card__footer--gray"> by Roxie Sandoval</span> </h4>
+                </div>
+            </div>
         </div>
     </section>
     <!-------------------
