--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -263,9 +263,24 @@
     <!-------------------
     CTA section 
     --------------------->
-    <section class="cta_blog">
-        <!--  Call to Action Blog -->
+    <section class="cta ">
+        <div class="container">
+            <div class="cta__content">
+                <div class="cta__passage ">
+                    <p class="cta__title title">Ready to supercharge your business?</p>
+                    <p class="cta__text medium-text">Ask about Yoora products, pricing, implementation, or anything
+                        else.<br> Our highly trained reps are
+                        standing by, ready to help.</p>
+                </div>
+                <div class="cta__button ">
+                    <button class="btn btn--primary"> Try For Free
+                        <img class="btn__icon" src="./img/button__icon.png" alt="shape">
+                    </button>
+                    <p class="cta__text small-text">Full access. No credit card required.</p>
+                </div>
+            </div>
 
+        </div>
     </section>
     <!-------------------
     CTA end
