--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -47,12 +47,12 @@
             </div>
             <div class="header__tab">
                 <ul class="tab__list">
-                    <li class="list--mark"><a class="list__item medium-text" href="#">All Articles</a></li>
-                    <li><a class="list__item medium-text" href="#">Marketing</a></li>
-                    <li><a class="list__item medium-text" href="#">Service</a></li>
-                    <li><a class="list__item medium-text " href="#">Product</a></li>
-                    <li><a class="list__item medium-text" href="#">News</a></li>
-                    <li><a class="list__item medium-text" href="#">Sales</a></li>
+                    <li class="list--mark"><a class="list__item text--medium" href="#">All Articles</a></li>
+                    <li><a class="list__item text--medium" href="#">Marketing</a></li>
+                    <li><a class="list__item text--medium" href="#">Service</a></li>
+                    <li><a class="list__item text--medium " href="#">Product</a></li>
+                    <li><a class="list__item text--medium" href="#">News</a></li>
+                    <li><a class="list__item text--medium" href="#">Sales</a></li>
 
             </div>
 
@@ -267,8 +267,8 @@
         <div class="container">
             <div class="cta__content">
                 <div class="cta__passage ">
-                    <p class="cta__title title">Ready to supercharge your business?</p>
-                    <p class="cta__text medium-text">Ask about Yoora products, pricing, implementation, or anything
+                    <p class="cta__title text--title ">Ready to supercharge your business?</p>
+                    <p class="cta__text text--medium">Ask about Yoora products, pricing, implementation, or anything
                         else.<br> Our highly trained reps are
                         standing by, ready to help.</p>
                 </div>
@@ -276,7 +276,7 @@
                     <button class="btn btn--primary"> Try For Free
                         <img class="btn__icon" src="./img/button__icon.png" alt="shape">
                     </button>
-                    <p class="cta__text small-text">Full access. No credit card required.</p>
+                    <p class="cta__text text--small">Full access. No credit card required.</p>
                 </div>
             </div>
 
