--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -274,7 +274,7 @@
                 </div>
                 <div class="cta__button ">
                     <button class="btn btn--primary"> Try For Free
-                        <img class="btn__icon" src="./img/button__icon.png" alt="shape">
+                        <img  class="btn__icon" src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
                     </button>
                     <p class="cta__text text--small">Full access. No credit card required.</p>
                 </div>
