--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -267,7 +267,7 @@
         <div class="container">
             <div class="cta__content">
                 <div class="cta__passage ">
-                    <p class="cta__title title ">Ready to supercharge your business?</p>
+                    <p class="cta__title font-xxx-large  ">Ready to supercharge your business?</p>
                     <p class="cta__text text--medium">Ask about Yoora products, pricing, implementation, or anything
                         else.<br> Our highly trained reps are
                         standing by, ready to help.</p>
