add git btn--btn--chevron

--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -273,7 +273,7 @@
                         standing by, ready to help.</p>
                 </div>
                 <div class="cta__button ">
-                    <button class="btn btn--primary"> Try For Free
+                    <button class="btn btn--primary btn--chevron"> Try For Free
                         <img  class="btn__icon" src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
                     </button>
                     <p class="cta__text text--small">Full access. No credit card required.</p>
